Se actualiza variable node
Signed-off-by: jgregorio <jgregorio@interware.com.mx>

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8081
+export NODE_ENV="mongodb://useriw:&Int3rw4r3M4rz02021@cluster0-shard-00-00.twqak.mongodb.net:27017,cluster0-shard-00-01.twqak.mongodb.net:27017,cluster0-shard-00-02.twqak.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-ahy1d3-shard-0&authSource=admin&retryWrites=true&w=majority"
