--- a/example.env
+++ b/example.env
@@ -1,2 +1,3 @@
 PORT=8081
-MONGO_CNN='mongodb+srv://useriw:&Int3rw4r3M4rz02021@cluster0.twqak.mongodb.net/cafeDB?retryWrites=true&w=majority'
+MONGO_CNN=
+EXAMPLE='mongodb+srv://useriw:&Int3rw4r3M4rz02021@cluster0.twqak.mongodb.net/cafeDB?retryWrites=true&w=majority'
